frontend/test/should_fail/keepOneForEach_iterated_unknown_accumulation_entity.grg
test t
{
	iterated it {
	---
		def var i:int;
		def var j:int;
	} \ keepOneForEach<i>Accumulate<k>By<sum>
}
